--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "next": "14.2.4",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
