--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.1.5",
+    "@iconify/icons-icon-park-outline": "^1.2.11",
     "axios": "^1.7.2",
     "framer-motion": "^11.3.2",
     "next": "14.2.4",
@@ -20,7 +21,9 @@
     "react": "^18",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
